--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,5 @@
-err.general.error.message = Something went wrong. Please try again later
-err.invalid.payload.type = Invalid payload. Please send a valid string payload. Refer API documentation for valid payload format
+err.loan.record.not.found = Loan record not found
+err.file.path.invalid = Invalid file path
+err.reading.file = Error while reading the command file
+err.invalid.emis = EMIs not valid
+err.invalid.payment.request = No valid payment record found
